--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
-p#teste_css {
-    color: red;
-    font-size: 20px;
-    font-family: "Comic Sans MS", cursive;
-    
+body {
+    font-family: Arial, sans-serif;
+    background-color: cyan;
+    text-align: center;
+}
+
+button {
+    background-color: gray;
+    color: white;
+    padding: 10px 20px;
+    margin: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: darkgray;
 }
