--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: cyan;
     text-align: center;
 }
@@ -7,13 +7,20 @@ body {
 button {
     background-color: gray;
     color: white;
-    padding: 10px 20px;
+    padding: 20px 40px;
     margin: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
 }
 
 button:hover {
     background-color: darkgray;
+}
+
+h6 {
+    text-align: left;
+}
+h2 {
+    text-align: justify;
 }
