--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: cyan;
+    background-color: rgb(44, 44, 44);
     text-align: center;
 }
 
@@ -23,4 +23,5 @@ h6 {
 }
 h2 {
     text-align: justify;
+    color: rgb(180, 180, 180);
 }
