Bagunça gigante descubra sozinho Tem que mudar o resto do bixo todinho num aguento mais

--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ button:hover {
 h6 {
     text-align: left;
 }
-h2 {
+p {
     text-align: justify;
     color: rgb(180, 180, 180);
+    font-size: larger;
 }
