--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ h1, h4 {
     color: darkgray;
 }
 img.cafe {
-    object-position: left;
     height: auto;
-    width: 256px;
-    margin-left: -87%;
+    width: 230px;
+    margin-right: 20px;
+    float: left;
 }
